fixing layout issues with comments below articles
- adjusting space between share icons and comments
- initial formatting and rejigging of items within
  the comments block

--- a/app/assets/stylesheets/components/sharing_buttons/_sharing_buttons.scss
+++ b/app/assets/stylesheets/components/sharing_buttons/_sharing_buttons.scss
@@ -1,9 +1,10 @@
 .sharing {
   @extend .unstyled-list;
   overflow: hidden;
-  margin: baseline-unit(2) 0;
+  margin: baseline-unit(6) 0;
 
   @include respond-to($mq-two-col) {
+    margin: baseline-unit(2) 0;
     position: fixed;
     top: 300px;
     right: 0;
